# KinectMouse

./: CMakeLists.txt  KinectPointer.cpp  KinectPointer.h  Pointer.cpp  Pointer.h  kinectmousewindow.cpp  kinectmousewindow.qrc  kinectmousewindow.ui  main.cpp
KinectMouse/: KinectMouse.sln
KinectMouse/KinectMouse/: KinectMouse.vcxproj  KinectMouse.vcxproj.filters  KinectPointer.cpp  KinectPointer.h  Pointer.cpp  Pointer.h  SimpleFilter.h  kinectmousewindow.cpp  kinectmousewindow.h  kinectmousewindow.ui
